@@ -69,7 +69,7 @@ Task_Stats::dump_samples (const ACE_TCHAR *file_name, const ACE_TCHAR *msg, int 
 
   char out_msg[BUFSIZ];
 
-  if (seconds == 0 || samples_count_ == 0)
+  if (ACE::is_equal (seconds, 0.0) || samples_count_ == 0)
   {
         ACE_OS::sprintf (out_msg,
                    "# No samples recorded\n");
